<resources>
    <string name="app_name">NewOrder</string>
    <string name="stop_music_play">Stop Music Play</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="notSave">Saving missing! Press a new game.</string>
    <string name="button">button</string>
    <string name="game8">8 puzzle</string>
    <string name="Score">Score: </string>
    <string name="bestScore">Record: </string>
    <string name="new_order">New Order</string>
    <string name="welcome_to_neworder">Welcome to NewOrder</string>
    <string name="score_txt">Score:</string>
    <string name="back_from_lead">Back</string>
    <string name="instructions">The jigsaw-puzzle is a well-known game which has a long history stretching back in the 1870\'s. The goal of the game is to arrange a shuffled set of numbered tiles in ascending order, by sliding tiles into the one vacant space on the grid. The less moves you make in each level the better you play!</string>
    <string name="press_on_this_button_to_stop_the_sound_from_playing">Press on this button to stop the sound from playing</string>
    <string name="_3x3">Easy</string>
    <string name="choose_grid_size">Choose Difficulty</string>
    <string name="_5x">Hard</string>
    <string name="_4x4">Medium</string>
    <string name="music_stop_silent">Music Stopped</string>
    <string name="music_is_playing">Music Is Playing</string>
    <string name="record">Record:</string>
    <string name="score">Score:</string>
    <string name="_8_puzzle">8 Puzzle</string>
    <string name="you_won">You have won! Congratulations!</string>
    <string name="_15_puzzle">15 Puzzle</string>
    <string name="_24_puzzle">24 Puzzle</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="register_textview">Register</string>
    <string name="please_enter_password_again">Please enter password again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="exit_login_btn">Exit</string>
    <string name="email">Email</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="email_reg">Email</string>
    <string name="please_enter_email_reg_hint">Please Enter Email</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="leadboard">Leadboard</string>
</resources>