<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtnReg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/sound_off_reg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:contentDescription="@string/stop_music_play"
            android:src="@drawable/sound_on" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_bold"
            android:gravity="center"
            android:text="@string/register_textview"
            android:textColor="@color/brown"
            android:textSize="48sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:id="@+id/layout_login_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/email_reg"
            android:textColor="@color/brown"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/amatic_bold"
            android:hint="@string/please_enter_email_reg_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="#A1887F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/password"
            android:textColor="@color/brown"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/amatic_bold"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword"
            android:textColorHint="#A1887F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/confirm_password"
            android:textColor="@color/brown"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/amatic_bold"
            android:hint="@string/please_enter_password_again"
            android:inputType="textPassword"
            android:textColorHint="#A1887F"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reg_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>


</LinearLayout>