<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_gravity="end"
        android:gravity="right|end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sound_off_reg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/stop_music_play"
            android:src="@drawable/sound_on" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutButtons"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/new_order"
            android:textColor="@color/brown"
            android:textSize="80sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_above="@id/layoutButtons"
        android:layout_below="@id/layout_title" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="49dp"
            android:text="@string/new_game"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/bСontinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="48dp"
            android:text="@string/continue_game"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="48dp"
            android:text="@string/help"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/logout_main_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="48dp"
            android:text="@string/logout"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_leadboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="49dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="48dp"
            android:text="@string/leadboard"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="48dp"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>