<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".LeadBoard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.tabs.TabItem

                android:id="@+id/easy_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy">

            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/med_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium">

            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/hard_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard">

            </com.google.android.material.tabs.TabItem>

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck">

        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>

    <Button
        android:id="@+id/back_from_lead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:background="@color/bordo"
        android:clickable="true"
        android:fontFamily="@font/amatic_bold"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:maxImageSize="28dp"
        app:srcCompat="@drawable/ic_back" />

</FrameLayout>