<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cream"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/titlebackground"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:background="@color/bordo"
            android:gravity="center"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/welcome_to_neworder"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="315dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/amatic_bold"
        android:text="@string/instructions"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/sound_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/amatic_bold"
        android:text="@string/press_on_this_button_to_stop_the_sound_from_playing"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/soundoffimg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/sound_off" />

    <ImageView
        android:id="@+id/okimg"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_ok" />


</LinearLayout>