<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bBackMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/btnhelp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_info" />

        <ImageView
            android:id="@+id/sound_off_reg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/sound_off" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutButtons"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/choose_grid_size"
            android:textColor="@color/brown"
            android:textSize="65sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignBottom="@+id/layout_title" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bLevel9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="48dp"
            android:text="@string/_3x3"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/bLevel15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="48dp"
            android:text="@string/_4x4"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/bLevel24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:background="@color/bordo"
            android:fontFamily="@font/amatic_bold"
            android:minHeight="48dp"
            android:text="@string/_5x"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>