<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/bBackMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/button" />

        <ImageView
            android:id="@+id/bAboutGame"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/button"
            android:src="@drawable/ic_info" />

        <ImageView
            android:id="@+id/sound_off_reg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/button"
            android:src="@drawable/sound_on" />

        <ImageView
            android:id="@+id/bNewGame"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_reload"
            android:contentDescription="@string/button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tPyatnashki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_bold"
            android:text="@string/_8_puzzle"
            android:textColor="@color/brown"
            android:textSize="48sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tSScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_bold"
                android:text="@string/score"
                android:textColor="@color/bordo"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/tScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_bold"

                android:textColor="@color/bordo"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/tBestSScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record"
                android:fontFamily="@font/amatic_bold"

                android:textColor="@color/bordo"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tBestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_bold"

                android:textColor="@color/bordo"
                android:textSize="24sp" />
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:rowCount="3"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/b900"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_row="0"
                android:layout_column="0"

                android:contentDescription="@string/button" />
            <ImageView
                android:id="@+id/b901"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/button" />
            <ImageView
                android:id="@+id/b902"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_row="0"
                android:layout_column="2"
                android:contentDescription="@string/button"/>

            <ImageView
                android:id="@+id/b910"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_row="1"
                android:layout_column="0"
                android:contentDescription="@string/button"/>
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:id="@+id/b911"
                android:layout_row="1"
                android:layout_column="1"
                android:contentDescription="@string/button"/>
            <ImageView
                android:id="@+id/b912"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_row="1"
                android:layout_column="2"
                android:contentDescription="@string/button"/>

            <ImageView
                android:id="@+id/b920"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_row="2"
                android:layout_column="0"
                android:contentDescription="@string/button"/>
            <ImageView
                android:id="@+id/b921"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_row="2"
                android:layout_column="1"
                android:contentDescription="@string/button"/>
            <ImageView
                android:id="@+id/b922"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_row="2"
                android:layout_column="2"
                android:contentDescription="@string/button"/>
        </GridLayout>

    </LinearLayout>
</RelativeLayout>
